# whyalla-pypsa

./: .gitignore  LICENSE  README.md  pyproject.toml
projects/dri-eaf/: MIGRATION.md  README.md  _fullyear_bench.py  _fullyear_bench_results.csv  chart_cumulative_emissions.py  chart_dispatch.py  chart_eaf_cannibalisation.py  chart_santos_gas.py  chart_wacc_sensitivity.py  generate_trajectory.py  process_chain.py  run.py  sweep_example.py  test_attach_whyalla.py  trajectory_baseline_partial.csv  trajectory_charts.py  validate.py  whyalla_physics.py  whyalla_results.py
projects/efuels/: .gitignore  MIGRATION.md  README.md  RESEARCH.md  chart_buffer_partition.py  chart_co2_supply_curve.py  chart_dispatch.py  chart_trajectory.py  co2_supply.py  efuels_physics.py  efuels_results.py  fossil_reference.py  generate_trajectory.py  process_chain.py  requirements.txt  run.py  sweep_example.py  test_attach_efuels.py  trajectory.csv  validate.py
projects/efuels/data/: trace_data  workbook_table_cache
projects/efuels/tests/: test_co2_supply_curve.py
scripts/: bench.py  test-all.sh
src/whyalla_pypsa/: __init__.py  config.py  facility.py  grid.py  sa_network.py  sweep.py
src/whyalla_pypsa/data/: __init__.py  aemo_draft_2026.py  iasr_2025.py  iasr_draft_2026.py  isp_ggo.py  plexos_xml.py  rez_mapping.py
src/whyalla_pypsa/post/: __init__.py  annuitise.py  levelised.py
tests/: conftest.py  test_aemo_loader.py  test_annuitise.py  test_config.py  test_facility_small.py  test_iasr_draft_2026.py  test_isp_ggo.py  test_plexos_xml.py  test_sa_network.py
